fix status e swagger
