# back-end/docs/swagger.json
@@ -39,13 +39,16 @@
         },
         "responses": {
           "201": {
-            "description": "Usuário cadastrado com sucesso"
+            "description": "Usuário cadastrado com sucesso."
           },
           "400": {
-            "description": "Usuário já cadastrado"
+            "description": "Erro de validação. Verifique os campos enviados."
+          },
+          "409": {
+            "description": "Usuário já está cadastrado."
           },
           "500": {
-            "description": "Erro no servidor"
+            "description": "Erro interno no servidor."
           }
         }
       }
@@ -53,7 +56,7 @@
     "/users/login": {
       "post": {
         "tags": ["Usuários"],
-        "summary": "Registrar um novo usuário",
+        "summary": "Logar com um usuário",
         "requestBody": {
           "required": true,
           "content": {
@@ -61,9 +64,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
-                    "type": "string"
-                  },
                   "email": {
                     "type": "string"
                   },
@@ -71,20 +71,59 @@
                     "type": "string"
                   }
                 },
-                "required": ["name", "email", "password"]
+                "required": ["email", "password"]
               }
             }
           }
         },
         "responses": {
-          "201": {
-            "description": "Usuário cadastrado com sucesso"
+          "200": {
+            "description": "Login realizado com sucesso."
           },
-          "400": {
-            "description": "Usuário já cadastrado"
+          "401": {
+            "description": "Credenciais inválidas."
           },
           "500": {
-            "description": "Erro no servidor"
+            "description": "Erro interno no servidor."
+          }
+        }
+      }
+    },
+    "/users/reset-password": {
+      "post": {
+        "tags": ["Usuários"],
+        "summary": "Redefinir a senha de um usuário",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "newPassword": {
+                    "type": "string"
+                  }
+                },
+                "required": ["email", "newPassword"] 
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Senha redefinida com sucesso."
+          },
+          "404": {
+            "description": "Usuário não encontrado."
+          },
+          "400": {
+            "description": "Erro de validação. Verifique os campos enviados."
+          },
+          "500": {
+            "description": "Erro interno no servidor."
           }
         }
       }
